Fix: text wrapping of titles with long sources

--- a/frontend/src/components/scss/helpers.scss
+++ b/frontend/src/components/scss/helpers.scss
@@ -321,3 +321,7 @@
     display: inherit;
   }
 }
+
+.break-word {
+  word-break: break-word;
+}
